--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "license-key"
 version = "0.1.0"
-authors = ["Patrik Svensson <patrik@patriksvensson.se>"]
-description = "A library that makes signaling between threads a bit more ergonomic."
+authors = ["Patrik Svensson <patrik@patriksvensson.se>","gkgoat"]
+description = "A license key system."
 license = "MIT"
 repository = "https://github.com/patriksvensson/license-key"
 keywords = ["license", "license-generator", "software-license"]
@@ -13,6 +13,9 @@ hex = "0.4.2"
 
 [dev-dependencies]
 criterion = "0.3"
+
+[lib]
+name = "license-key"
 
 [[bench]]
 name = "generator"
