continue the legacy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "license-key"
-version = "0.1.0"
+name = "portal-pc-license-key"
+version = "0.2.0"
 authors = ["Patrik Svensson <patrik@patriksvensson.se>","gkgoat"]
 description = "A license key system."
 license = "MIT"
